# terraform-aws-services

./: .flake8  .gitignore  .pylintrc  pyproject.toml
app/: main.py
app/adapters/: __init__.py  _factory.py
app/adapters/_aws/: __init__.py  _aws_secrets_manager.py
app/exceptions/: __init__.py  _secret_manager_errors.py
app/ports/: __init__.py  _secret_manager.py
infrastructure/docker/: docker-compose.yml
infrastructure/localstack/: .env
infrastructure/terraform/: .env  .terraform.lock.hcl  main.tf  variables.tf
infrastructure/terraform/modules/terraform-aws-secretsmanager/: main.tf  variables.tf
